--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-build-classic": "^38.0.1",
     "@ckeditor/ckeditor5-react": "^6.0.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.3",
     "multi-range-slider-react": "^2.0.3",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
@@ -23,7 +24,10 @@
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.2",
     "react-select": "^5.7.3",
-    "sort-by": "^1.2.0"
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "sort-by": "^1.2.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
